# vae-playground

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
src/vaeplayland/: __init__.py
src/vaeplayland/config/: __init__.py  logging.py  main.yaml  read.py
src/vaeplayland/config/data/: celeba.yaml  celeba_dataloader.yaml  dataloader.yaml  default.yaml  generic.yaml  generic_dataloader.yaml  iris.yaml  iris_dataloader.yaml  iris_perm.yaml  random.yaml  random_dataloader.yaml
src/vaeplayland/config/model/: experimental.yaml  experimental_iris.yaml  experimental_kl2.yaml  image.yaml  multimodal.yaml  simplebi.yaml  vae.yaml
src/vaeplayland/config/trainer/: csv.yaml  default.yaml
src/vaeplayland/data/: __init__.py  celeba.py  generic.py  iris.py  random.py
src/vaeplayland/models/: __init__.py  loss.py  multimodal_vae.py  vae.py
src/vaeplayland/models/decoders/: __init__.py  image_decoder.py  multimodal_decoder.py  simple_decoder.py
src/vaeplayland/models/encoders/: __init__.py  image_encoder.py  multimodal_encoder.py  simple_encoder.py
src/vaeplayland/models/experimental/: __init__.py  bimodal_vae.py  multimodal_vae.py  multimodal_vae_t.py  multimodal_vae_t2.py  multimodal_vae_t3.py  multimodal_vae_t4.py  multimodal_vae_t_.py
src/vaeplayland/training/: __init__.py  train.py  wrappers.py  wrappers2.py
