[metadata]
name = vaeplayland
description = A VAE playland
classifiers =
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
version = attr: vaeplayland.__version__

[options]
install_requires =
    numpy
    pandas
    torch
    hydra-core
package_dir =
    = src
packages = find:
python_requires = >=3.7.0
include_package_data = True


[options.packages.find]
where = src
