[metadata]
name = vaeplayland
description = A VAE playland
classifiers =
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
version = attr: vaeplayland.__version__

[options]
install_requires =
    hydra-core
    numpy
    pandas
    torch
    pyro-ppl
    pytorch-lightning
package_dir =
    = src
packages = find:
python_requires = >=3.9.0
include_package_data = True

[options.entry_points]
console_scripts =
    vae-train = vaeplayland.training.train:train

[options.packages.find]
where = src
